# for_starlette_issue_TimeoutException

./: .gitignore  pyproject.toml
starlette_example/external_service/: __main__.py  main.py
starlette_example/main_service/: __main__.py  client_for_external_service.py  main.py
starlette_example/tests_main_service/: conftest.py  test_for_server.py
