[tool.poetry]
name = "for-starlette-issue-timeoutexception"
version = "0.1.0"
description = ""
authors = ["Dmitry Batishchev <dmbatishchev@metapix.ai>"]
readme = "README.md"
packages = [{include = "for_starlette_issue_timeoutexception"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.22.0"
starlette = "0.20.4"
httpx = "^0.24.0"
pytest = "^7.3.1"
pytest-httpx = "^0.22.0"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
